--- a/index.html
+++ b/index.html
@@ -1,11 +1,170 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, width=device-width, viewport-fit=contain" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wade wws in YEG</title>
+  <link rel="stylesheet" href="css/bootstrap-grid.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/card.css">
+  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/fontawesome.all.min.css">
+  <script src="js/header.js" defer></script>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="shortcut icon" href="images/me_Oct2019_SqSmGry.jpg?v=1" type="image/jpg" sizes="16x16 32x32 64x64">
+  <meta name="apple-mobile-web-app-title" content="Wws">
+  <title>Wws</title>
+  <meta name="description" content="Wade Smith - Buisness solutions developer" />
+  <meta name="keywords" content="mobile, application, iot, design, developer, software" />
 </head>
 <body>
-  <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  
+  <div class="header sidenav animated right menu-full">
+    <div class="container">
+      <div class="row no-gutters">
+
+        <!-- Header -->
+        <div class="col-10 col-md-4 align-left nosel titlebar">
+          <div class="clrwht LogoBox"><h3>WWS</h3></div>
+        </div>
+        <div class="col-2 align-right d-md-none evt-expandNav">
+          <i class="fas navicon fa-2x fa-bars"></i>
+        </div>
+
+        <!-- Nav -->
+        <div class="col-12 col-md-8 d-md-flex justify-content-end navbar">
+          <div class="row sidenav-header">
+            <div class="col-12 align-center titlebar">
+              <h3 class="clrwht">Menu</h3>
+            </div>
+          </div>
+          <ul class="nav">
+            <li class="navitem">
+              <a title="home" href="/index.html">
+                <i class="fas icon fa-home"></i>
+                <label for="">Home</label>
+              </a>
+            </li>
+            <!-- <li class="navitem dropdown">
+              <a class="dropdown-toggle">
+                <i class="fas icon fa-cog"></i>
+                <label for="">Admin</label>
+                <i class="fas fa-angle-down"></i>
+              </a>
+              <ul class="dropdown-nav">
+                <li><a title="accounts" href="/admin/accounts">Accounts</a></li>
+                <li><a title="equipment" href="/admin/equipment">Equipment</a></li>
+              </ul>
+            </li> -->
+          </ul>
+          <div class="nav_collapse evt-expandNav d-md-none">
+            <i class="fas fa-2x fa-chevron-right"></i>
+          </div>
+        </div>
+        <!-- Nav-End -->
+
+      </div>
+    </div>
+    <div class="nav-lightbox evt-expandNav"></div>
+  </div>
+
+  <!-- hero section -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 home-hero">
+        <div class="hero-Text container">
+          <div class="profile-img circle"></div>
+          <div class="profile-text">
+            <h1>
+              Hi, I'm<br>
+              Wade Smith
+            </h1><br>
+            <h3>Business Solutions Developer</h3>
+          </div>
+        </div>
+        <div class="heroImg"></div>
+      </div>
+    </div>
+  </div>
+  <br><br>
+
+  <!-- services -->
+  <div class="container key-services">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-3 align-center">
+        <i class="fas fa-tag"></i><br>
+        <h3>Brand</h3><br>
+        <p>
+          Creation of marketing sites to build-out and sell your brand, 
+          integration of modern tools, like chat or streaming on-site.
+        </p>
+      </div>
+      <div class="col-12 col-md-3 align-center">
+        <i class="fas fa-cogs"></i><br>
+        <h3>Infrastruction</h3><br>
+        <p>
+          Mobile and Web apps to manage: customer data, systems, IOT devices
+          and more with real-time cloud driven systems to build your business on.
+        </p>
+      </div>
+      <div class="col-12 col-md-3 align-center">
+        <i class="fas fa-sitemap"></i><br>
+        <h3>Process</h3><br>
+        <p>
+          Integration of modern systems into your existing or new workflows,
+          with years of experience working with people and businesses 
+        </p>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-3 align-center">
+        <i class="fas fa-magic"></i><br>
+        <h3>Automation</h3><br>
+        <p>
+          Using coding and taking in business logic to automate repeative task,
+          grow your business 10x plus by getting more done in the day.
+        </p>
+      </div>
+      <div class="col-12 col-md-3 align-center">
+        <i class="far fa-eye"></i><br>
+        <h3>Transparency</h3><br>
+        <p>
+          Give your customers a view into your company, cut your customer support 
+          dramatically by letting them track their own orders.
+        </p>
+      </div>
+      <div class="col-12 col-md-3 align-center">
+        <i class="fas fa-pencil-ruler"></i><br>
+        <h3>Visuals</h3><br>
+        <p>
+          Take the guess work out of what they are getting, use modern graphic systems
+          to present your product online in full detail.
+        </p>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-9 align-center">
+        <hr>
+        <br>
+        <h1><b class="clrpri">Break it down.</b></h1>
+        <br><br>
+        <p>
+          Any problem can be broken down, with the right tools and processes
+          in place any business can be automated.<br> 
+          With automation and the right processes your business can grow exponentially.<br>
+          All you need is someone with the experiences and know-how to make it
+          come together.
+        </p>
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
