--- a/index.html
+++ b/index.html
@@ -157,11 +157,9 @@
           Any problem can be broken down, with the right tools and processes
           in place any business can be automated.<br> 
           With automation and the right processes your business can grow exponentially.<br>
-          All you need is someone with the experiences and know-how to make it
-          come together.
+          All you need is someone with the right experiences to make it come together.
         </p>
-        <br>
-        <br>
+        <br><br><br>
       </div>
     </div>
   </div>
