--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     <div class="row justify-content-center">
       <div class="col-12 col-md-3 align-center">
         <i class="fas fa-tag"></i><br>
-        <h3>Brand</h3><br>
+        <h3>Branding</h3><br>
         <p>
-          Creation of marketing sites to build-out and sell your brand, 
+          Creating marketing sites to build-out and sell your brand, 
           integration of modern tools, like chat or streaming on-site.
         </p>
       </div>
@@ -106,8 +106,8 @@
         <i class="fas fa-cogs"></i><br>
         <h3>Infrastruction</h3><br>
         <p>
-          Mobile and Web apps to manage: customer data, systems, IOT devices
-          and more with real-time cloud driven systems to build your business on.
+          Building mobile and web apps to manage customers, devices, and systems
+          with real-time cloud driven systems to build your business on.
         </p>
       </div>
       <div class="col-12 col-md-3 align-center">
@@ -115,7 +115,7 @@
         <h3>Process</h3><br>
         <p>
           Integration of modern systems into your existing or new workflows,
-          with years of experience working with people and businesses 
+          with years of experience working with people and businesses.
         </p>
       </div>
     </div>
@@ -125,15 +125,15 @@
         <i class="fas fa-magic"></i><br>
         <h3>Automation</h3><br>
         <p>
-          Using coding and taking in business logic to automate repeative task,
-          grow your business 10x plus by getting more done in the day.
+          Converting your business logic into code to automate repeative task,
+          grow your business 10x by getting more out the door each day.
         </p>
       </div>
       <div class="col-12 col-md-3 align-center">
         <i class="far fa-eye"></i><br>
         <h3>Transparency</h3><br>
         <p>
-          Give your customers a view into your company, cut your customer support 
+          Helping give your customers a view into your company, cuts your customer support 
           dramatically by letting them track their own orders.
         </p>
       </div>
@@ -141,25 +141,51 @@
         <i class="fas fa-pencil-ruler"></i><br>
         <h3>Visuals</h3><br>
         <p>
-          Take the guess work out of what they are getting, use modern graphic systems
+          Taking the guess work out of what they are getting, using modern graphic systems
           to present your product online in full detail.
         </p>
       </div>
     </div>
 
     <div class="row justify-content-center">
-      <div class="col-12 col-md-9 align-center">
+      <div class="col-12">
         <hr>
-        <br>
-        <h1><b class="clrpri">Break it down.</b></h1>
+        <br><br>
+      </div>
+      <div class="col-12 col-md-7 align-center">
+        <h1><b class="clrpri">How can I help?</b></h1>
         <br><br>
         <p>
-          Any problem can be broken down, with the right tools and processes
-          in place any business can be automated.<br> 
-          With automation and the right processes your business can grow exponentially.<br>
-          All you need is someone with the right experiences to make it come together.
+          Working with people to plan out a strategy to deliver the tools and
+          systems needed to keep up with these modern times, and driving business forward.<br>
+          <br>
         </p>
-        <br><br><br>
+      </div>
+    </div>
+  </div>
+
+  <!-- footer -->
+  <div class="container-fluid footer">
+    <div class="row justify-content-center">
+      <div class="col-3">
+        <br>
+        <h3>Wade Smith</h3><br>
+        <h4>Business Solutions Developer</h4>
+        <br>
+      </div>
+      <div class="col-3 align-right">
+        <br>
+        <h1>
+          <a href="https://twitter.com/messages/compose?recipient_id=1250768309617782786">
+            <i class="fab fa-twitter"></i>
+          </a>&nbsp;
+          <a href="https://m.me/w4smith">
+            <i class="fab fa-facebook-messenger"></i>
+          </a>&nbsp;
+          <a href="https://www.facebook.com/w4smith/">
+            <i class="fab fa-facebook-square"></i>
+          </a>
+        </h1>
       </div>
     </div>
   </div>
