--- a/projects.html
+++ b/projects.html
@@ -157,9 +157,9 @@
                 <li>Print, Download, and Email lab reports</li>
               </ul>
             </div>
-            <div class="text-bottom-right d-none d-md-block point">
-              <i class="fas owl-PrevBtn clrpri fa-4x fa-caret-left"></i> &nbsp; &nbsp;
-              <i class="fas owl-NextBtn clrpri fa-4x fa-caret-right"></i>
+            <div class="text-bottom-right d-none d-md-block point clrmd">
+              <i class="fas owl-PrevBtn fa-4x fa-caret-left"></i> &nbsp; &nbsp;
+              <i class="fas owl-NextBtn fa-4x fa-caret-right"></i>
             </div>
           </div>
         </div>
@@ -176,9 +176,9 @@
               <li>Add notes inline to pass back inportant details</li>
             </ul>
           </div>
-          <div class="text-bottom-right d-none d-md-block point">
-            <i class="fas owl-PrevBtn clrpri fa-4x fa-caret-left"></i> &nbsp; &nbsp;
-            <i class="fas owl-NextBtn clrpri fa-4x fa-caret-right"></i>
+          <div class="text-bottom-right d-none d-md-block point clrmd">
+            <i class="fas owl-PrevBtn fa-4x fa-caret-left"></i> &nbsp; &nbsp;
+            <i class="fas owl-NextBtn fa-4x fa-caret-right"></i>
           </div>
         </div>
 
@@ -192,9 +192,9 @@
               <li>Search by location details or other points of reference</li>
             </ul>
           </div>
-          <div class="text-bottom-right d-none d-md-block point">
-            <i class="fas owl-PrevBtn clrpri fa-4x fa-caret-left"></i> &nbsp; &nbsp;
-            <i class="fas owl-NextBtn clrpri fa-4x fa-caret-right"></i>
+          <div class="text-bottom-right d-none d-md-block point clrmd">
+            <i class="fas owl-PrevBtn fa-4x fa-caret-left"></i> &nbsp; &nbsp;
+            <i class="fas owl-NextBtn fa-4x fa-caret-right"></i>
           </div>
         </div>
 
@@ -208,9 +208,9 @@
               <li>Monitor contract details for out-of-service</li>
             </ul>
           </div>
-          <div class="text-bottom-right d-none d-md-block point">
-            <i class="fas owl-PrevBtn clrpri fa-4x fa-caret-left"></i> &nbsp; &nbsp;
-            <i class="fas owl-NextBtn clrpri fa-4x fa-caret-right"></i>
+          <div class="text-bottom-right d-none d-md-block point clrmd">
+            <i class="fas owl-PrevBtn fa-4x fa-caret-left"></i> &nbsp; &nbsp;
+            <i class="fas owl-NextBtn fa-4x fa-caret-right"></i>
           </div>
         </div>
 
@@ -224,9 +224,9 @@
               <li>Generated Label for easy sample labeling</li>
             </ul>
           </div>
-          <div class="text-bottom-right d-none d-md-block point">
-            <i class="fas owl-PrevBtn clrpri fa-4x fa-caret-left"></i> &nbsp; &nbsp;
-            <i class="fas owl-NextBtn clrpri fa-4x fa-caret-right"></i>
+          <div class="text-bottom-right d-none d-md-block point clrmd">
+            <i class="fas owl-PrevBtn fa-4x fa-caret-left"></i> &nbsp; &nbsp;
+            <i class="fas owl-NextBtn fa-4x fa-caret-right"></i>
           </div>
         </div>
 
