--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="shortcut icon" href="images/me_Oct2019_SqSmGry.jpg?v=1" type="image/jpg" sizes="16x16 32x32 64x64">
   <meta name="apple-mobile-web-app-title" content="Wws">
-  <title>Wws</title>
-  <meta name="description" content="Wade Smith - Buisness solutions developer" />
-  <meta name="keywords" content="mobile, application, iot, design, developer, software" />
+  <title>Wade Smith - Business Solutions Developer</title>
+  <meta name="description" content="Creative solutions to your most difficult problems." />
+  <meta name="keywords" content="coding, mobile, application, iot, design, developer, software" />
+  <meta property=”og:type” content=”website” />
+  <meta property="og:url" content="https://wade-wws.github.io/index.html" />
+  <meta property="og:title"  content="Wade Smith - Business Solutions Developer" />
+  <meta property="og:description" content="Creative solutions to your most difficult problems." />
+  <meta property="og:image" content="https://wade-wws.github.io/images/HomeScreen_OG.jpg" />
 </head>
 <body>
   
