--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,8 @@
   <title>Wade Smith - Business Solutions Developer</title>
   <meta name="description" content="Creative solutions to your most difficult problems." />
   <meta name="keywords" content="coding, mobile, application, iot, design, developer, software" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:creator" content="@wade_yeg" />
   <meta property=”og:type” content=”website” />
   <meta property="og:url" content="https://wade-wws.github.io/projects.html" />
   <meta property="og:title"  content="Wade Smith - Business Solutions Developer" />
